--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="botonCatalogo">
-            <button><a href="catalogo.html">Más Información</a></button>
+            <button><a href="CatalogoMobileFix.pdf">Más Información</a></button>
         </div>
     </div>
 
